--- a/index.html
+++ b/index.html
@@ -27,93 +27,133 @@
 	</div>
 
 	
+	<!-- Slider -->
+	<div class="carousel slide" data-ride="carousel" id="slides">
+		<ul class="carousel-indicators">
+			<li data-target="#slides" data-slide-to="0" class="active"></li>
+			<li data-target="#slides" data-slide-to="1"></li>
+			<li data-target="#slides" data-slide-to="2"></li>
+		</ul>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="img/Layer22.png" alt="">
+			</div>
+			<div class="carousel-caption">
+				<h1>iOS apps for free</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.         
+				Morbi faucibus augue vitae est volutpat eleifend.</p>
+				<button>more info</button>
+			</div>
 
+			<div class="carousel-item">
+				<img src="img/Group2.png" alt="">
+			</div>
+			<div class="carousel-caption">
+				<h1>iOS apps for free</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.         
+				Morbi faucibus augue vitae est volutpat eleifend.</p>
+				<button>more info</button>
+			</div>
 
-<!-- Services -->
-<div class="Services">
-	<div class="title">
-		<span>OUR SERVICES</span>
+			<div class="carousel-item">
+				<img src="img/Layer22.png" alt="">
+			</div>
+			<div class="carousel-caption">
+				<h1>iOS apps for free</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.         
+				Morbi faucibus augue vitae est volutpat eleifend.</p>
+				<button>more info</button>
+			</div>
+		</div>
 	</div>
 
-	<div class="Apple">
-		<img src="img/apple.png" alt="">
-		<h2>HEADING 1</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus augue vitae est volutpat eleifend.</p>
-		<button>more info</button>
-	</div>
 
-	<div class="Android">
-		<img src="img/android.png" alt="">
-		<h2>HEADING 2</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus augue vitae est volutpat eleifend.</p>
-		<button>more info</button>
-	</div>
 
-	<div class="Windows">
-		<img src="img/win8.png" alt="">
-		<h2>HEADING 3</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus augue vitae est volutpat eleifend.</p>
-		<button>more info</button>
-	</div>
-</div>
-
-<!-- About -->
-<div class="About" id="aboutId">
-	<div class="container">
+	<!-- Services -->
+	<div class="Services">
 		<div class="title">
-			<span>ABOUT</span>
+			<span>OUR SERVICES</span>
 		</div>
-		<div class="row justify-content-center zag">
-			<div class="col-sm-12 col-md-3 col-lg-2"></div>
 
-			<div class="col-sm-12 col-md-3 col-lg-2"></div>
+		<div class="Apple">
+			<img src="img/apple.png" alt="">
+			<h2>HEADING 1</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus augue vitae est volutpat eleifend.</p>
+			<button>more info</button>
 		</div>
-		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-6">
-				<h4>Test task</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus augue vitae est volutpat eleifend. Donec lobortis tellus quis nulla varius nec sagittis dui vestibulum. Mauris volutpat tellus id est suscipit placerat. Integer ut feugiat nisi. Etiam dictum condimentum mauris, nec pellentesque augue dignissim ut. Integer commodo vulputate ipsum at vehicula. Fusce sit amet metus quam. In hac habitasse platea dictumst.</p>
-				<h5>Skills</h5>
-				<div class="progress">
-					<div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" >html / html5</div>
-				</div>
-				<div class="progress">
-					<div class="progress-bar-1" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">css / css3</div>
-				</div>
-				<div class="progress">
-					<div class="progress-bar-2" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">photoshop / illustrator</div>
-				</div>
-				<div class="progress">
-					<div class="progress-bar-3" role="progressbar"  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">mobile design / responsive design</div>
-				</div>
+
+		<div class="Android">
+			<img src="img/android.png" alt="">
+			<h2>HEADING 2</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus augue vitae est volutpat eleifend.</p>
+			<button>more info</button>
+		</div>
+
+		<div class="Windows">
+			<img src="img/win8.png" alt="">
+			<h2>HEADING 3</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus augue vitae est volutpat eleifend.</p>
+			<button>more info</button>
+		</div>
+	</div>
+
+	<!-- About -->
+	<div class="About" id="aboutId">
+		<div class="container">
+			<div class="title">
+				<span>ABOUT</span>
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-6" id="contactId">
-				<div class="Map"> 
-					<img src="img/Layer23.png" alt="">
-				</div><br />
-				<form action="">
-					<input type="text" placeholder="NAME">
-					<input type="email" placeholder="E-MAIL">
-					<input type="tel" placeholder="PHONE">
-					<textarea type="text" name="comment" cols="20" rows="3"  placeholder="MESSAGE"></textarea>
-					<input class="butt" type="submit" value="SEND">
-				</form>
+			<div class="row justify-content-center zag">
+				<div class="col-sm-12 col-md-3 col-lg-2"></div>
+
+				<div class="col-sm-12 col-md-3 col-lg-2"></div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-6">
+					<h4>Test task</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus augue vitae est volutpat eleifend. Donec lobortis tellus quis nulla varius nec sagittis dui vestibulum. Mauris volutpat tellus id est suscipit placerat. Integer ut feugiat nisi. Etiam dictum condimentum mauris, nec pellentesque augue dignissim ut. Integer commodo vulputate ipsum at vehicula. Fusce sit amet metus quam. In hac habitasse platea dictumst.</p>
+					<h5>Skills</h5>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" >html / html5</div>
+					</div>
+					<div class="progress">
+						<div class="progress-bar-1" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">css / css3</div>
+					</div>
+					<div class="progress">
+						<div class="progress-bar-2" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">photoshop / illustrator</div>
+					</div>
+					<div class="progress">
+						<div class="progress-bar-3" role="progressbar"  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">mobile design / responsive design</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-12 col-lg-6" id="contactId">
+					<div class="Map"> 
+						<img src="img/Layer23.png" alt="">
+					</div><br />
+					<form action="">
+						<input type="text" placeholder="NAME">
+						<input type="email" placeholder="E-MAIL">
+						<input type="tel" placeholder="PHONE">
+						<textarea type="text" name="comment" cols="20" rows="3"  placeholder="MESSAGE"></textarea>
+						<input class="butt" type="submit" value="SEND">
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
 
-<!-- Footer -->
-<footer>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-				<span>Copyrights here</span>
+	<!-- Footer -->
+	<footer>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<span>Copyrights here</span>
+				</div>
 			</div>
-		</div>
 
-	</div>
-</footer>
+		</div>
+	</footer>
 
 
 </body>
